2004-07-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/monologue-worker.cs: excluded ENTRY_PERSON code as it's not in
	the default.tpl in CVS and make the generated titles for the entries be
	like "Name: Name: Title".

2004-07-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/Makefile: reference ICSharpCode.SharpZipLib.
	* worker/RSS.NET.dll: updated.
	* worker/monologue-worker.cs: don't trust RSS.NET to download the files.
	Added --cachedir option that provides a directory to keep a cache of
	downloaded files. If we have the file, send the If-Modified-Since
	header. Also allow gzipped responses.

2004-03-10  Duncan Mak  <duncan@ximian.com>

	* worker/monologue-worker.cs (RunOnce): Changed the site url from
	"http://monologue.go-mono.com" to the correct
	"http://go-mono.com/monologue".

2003-11-05 Ben Maurer  <bmaurer@users.sourceforge.net>

	* www/mono-powered-big.png: added
	* worker/default.tpl: add mono power icon.

2003-10-21  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* AUTHORS: Added
	* README: Added
	* ChangeLog: Added
	* www/xml.gif: Added
	* worker/xml.gif: Removed